--- a/index.html
+++ b/index.html
@@ -101,16 +101,19 @@
       <div class="section-title"><div class="bar"></div><h2>서비스</h2></div>
       <div class="grid cols-3">
         <div class="card">
-          <h3>서비스 A</h3>
-          <p class="muted">간단한 설명을 적어주세요. 어떤 문제를 해결하고, 무엇이 다른지.</p>
+          <h3>이미지 압축/변환기</h3>
+          <p class="muted">용량이 큰 이미지를 간단하게 업로드 후 압축하여 다운로드 할 수 있는 도구입니다.</p>
+          <a class="btn primary" href="/imagecompressor.html">바로가기</a>
         </div>
         <div class="card">
-          <h3>서비스 B</h3>
-          <p class="muted">가격대나 리드타임, 제공 산출물 등 핵심 정보 위주로.</p>
+          <h3>Stock Market</h3>
+          <p class="muted">S&P500의 대표 기업 주가 정보와 최근 기사를 제공합니다.</p>
+          <a class="btn primary" href="/stock.html">바로가기</a>
         </div>
         <div class="card">
-          <h3>서비스 C</h3>
-          <p class="muted">필요 시 "자주 묻는 질문"을 링크로 연결해도 좋아요.</p>
+          <h3>여의도 맛집</h3>
+          <p class="muted">여의도 태영빌딩 인근의 식당 정보를 제공합니다. 사다리 타기 게임 통해 독박자를 골라보세요!</p>
+          <a class="btn primary" href="/matjip.html">바로가기</a>
         </div>
       </div>
     </section>
