--- a/imagecompressor.html
+++ b/imagecompressor.html
@@ -30,6 +30,21 @@
   </style>
 </head>
 <body>
+
+  <header>
+  <div class="container">
+    <nav>
+      <div class="brand">내 홈페이지 <span>Matjip</span></div>
+      <div class="navlinks">
+        <a href="index.html">Home</a>
+        <a href="stock.html">Stock Market</a>
+        <a href="matjip.html">맛집</a>
+        <a href="index.html#contact" class="btn primary">문의하기</a>
+      </div>
+    </nav>
+  </div>
+</header>
+  
   <div class="wrap">
     <h1>이미지 용량 압축 및 변환 (설치 불필요, 무제한 사용)</h1>
     <div class="card">
