--- a/imagecompressor.html
+++ b/imagecompressor.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>로컬 이미지 용량 압축 (오프라인, 설치 불필요)</title>
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     :root{--bg:#0b1220;--fg:#e5e7eb;--muted:#9aa3af;--accent:#60a5fa;--danger:#ef4444;--border:#1f2937}
     *{box-sizing:border-box}
