--- a/imagecompressor.html
+++ b/imagecompressor.html
@@ -35,7 +35,7 @@
   <header>
   <div class="container">
     <nav>
-      <div class="brand">내 홈페이지 <span>Matjip</span></div>
+      <div class="brand">내 홈페이지 </div>
       <div class="navlinks">
         <a href="index.html">Home</a>
         <a href="stock.html">Stock Market</a>
