--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
   <main class="container">
     <section class="hero">
-      <p class="tag" data-anim>반응형 · 단일 파일 · 즉시 배포</p>
-      <h1 data-anim="2">심플하지만 강한<br/>나만의 온라인 홈페이지</h1>
-      <p data-anim="3">아래 섹션의 텍스트만 바꾸면 바로 사용 가능합니다. GitHub Pages, Netlify, Vercel 등 어디든 배포할 수 있어요.</p>
+      <p class="tag" data-anim>모바일 반응형 · 무료 배포</p>
+      <h1 data-anim="2">안녕하세요<br/>홈페이지 방문을 환영합니다</h1>
+      <p data-anim="3">아래 섹션의 제공중인 서비스를 바로 이용해보세요.</p>
       <div style="display:flex;gap:12px;flex-wrap:wrap" data-anim="3">
         <a class="btn primary" href="#services">무엇을 제공하나요</a>
         <a class="btn ghost" href="#work">작업물 보기</a>
@@ -38,15 +38,15 @@
       <div class="section-title"><div class="bar"></div><h2>소개</h2></div>
       <div class="grid cols-2">
         <div class="card">
-          <h3>브랜드 메시지</h3>
-          <p class="muted">당신 혹은 회사의 핵심 가치를 한두 문장으로 요약해보세요. 예: "데이터 기반 컨설팅으로 실행 가능한 성장을 만듭니다."</p>
+          <h3>개발자 메시지</h3>
+          <p class="muted">AI를 활용한 코딩으로 웹페이지 제작 연습을 위한 공간입니다. 무료 배포, 공유 환영입니다~!</p>
         </div>
         <div class="card">
-          <h3>강점 & 차별점</h3>
+          <h3>추가 개선 방향</h3>
           <ul class="muted">
-            <li>핵심 솔루션/서비스 1</li>
-            <li>핵심 솔루션/서비스 2</li>
-            <li>핵심 솔루션/서비스 3</li>
+            <li>컨설팅 장표 작성에 필요한 기능 추가 예정(기업 로고 검색 등)</li>
+            <li>단체 미팅에 활용 가능한 게임요소 추가 예정(인물 맞추기 게임 등)</li>
+            <li>인증된 회원끼리 중고 거래 게시판 추가 예정</li>
           </ul>
         </div>
       </div>
@@ -75,14 +75,11 @@
 
     <section id="work">
       <div class="section-title"><div class="bar"></div><h2>포트폴리오</h2></div>
-      <div class="grid cols-3">
+      <div class="grid cols-1">
         <div class="card">
-          <h3>프로젝트 1</h3>
-          <p class="muted">간단 설명 · 결과 링크</p>
-        </div>
-        <div class="card">
-          <h3>프로젝트 3</h3>
-          <p class="muted">간단 설명 · 결과 링크</p>
+          <h3>컨설팅 성격 유형 테스트!! - SC&O Version</h3>
+          <p class="muted">우리 부서의 컨설턴트들은 어떤 캐릭터 유형을 가지고 있는 간단한 테스트를 통해 알아보세요!</p>
+          <a class="btn primary" href="/scotest.html">테스트 시작하기</a>
         </div>
       </div>
     </section>
