--- a/index.html
+++ b/index.html
@@ -88,29 +88,29 @@
       <div class="section-title"><div class="bar"></div><h2>FAQ</h2></div>
       <div class="grid cols-2">
         <div class="card">
-          <h3>어떤 용도로 쓸 수 있나요?</h3>
-          <p class="muted">개인 포트폴리오, 소규모 비즈니스 랜딩, 프로젝트 소개용 등으로 바로 사용 가능합니다. 섹션 텍스트만 바꾸세요.</p>
+          <h3>이미지 압축/변환기 관련</h3>
+          <p class="muted">JPG, PNG, WebP 이미지를 지원합니. 웹/모바일에서 보기 좋은 수준으로 자동 조정되며 직접 품질을 설정할 수 있습니다.</p>
         </div>
         <div class="card">
-          <h3>배포는 어떻게 하나요?</h3>
-          <p class="muted">GitHub Pages, Netlify, Vercel 중 하나에 <code>index.html</code>을 업로드하면 됩니다. 이미 안내한 순서를 따르면 10분 내 배포 가능.</p>
+          <h3>Stock Market 서비스 관련</h3>
+          <p class="muted">현재는 S&P500 기업 위주로 제공되며, 금융기관의 위젯을 통해 실시간 또는 지연 데이터(최대 15분 지연)를 제공합니다.</p>
         </div>
         <div class="card">
-          <h3>문의 폼은 작동하나요?</h3>
-          <p class="muted">기본은 안내 알림만 띄웁니다. 실제 수집은 Formspree, Google Apps Script 등과 연동해 주세요.</p>
+          <h3>여의도 맛집 페이지 관련</h3>
+          <p class="muted">카카오맵 API 통해 등록된 맛집 정보를 제공합니다.</p>
         </div>
         <div class="card">
-          <h3>디자인은 변경할 수 있나요?</h3>
-          <p class="muted">가능합니다. 색상 변수, 섹션 순서, 카드 개수 등을 자유롭게 수정하세요.</p>
+          <h3>컨설팅 형 테스트 관련</h3>
+          <p class="muted">테스트 결과는 저장되지 않으며, 본인 화면에서만 확인 가능합니다.</p>
         </div>
       </div>
     </section>
 
     <section id="contact">
       <div class="section-title"><div class="bar"></div><h2>문의하기</h2></div>
-      <div class="grid cols-2">
+      <div class="grid cols-1">
         <div class="card">
-          <p class="muted">이메일, 전화번호, 회사 주소 등 연락처를 적어주세요.</p>
+          <p class="muted">개인정보 수집 제약으로 인하여 필요한 문의 사항은 개발자에게 직접 문의하세요. (연락처는 제공하지 않습니다)</p>
           <p><strong>이메일</strong>: <a href="mailto:hello@example.com">hello@example.com</a><br/>
              <strong>전화</strong>: 010-0000-0000</p>
           <p class="muted">* 동의 없이 개인정보를 수집하지 않습니다.</p>
